--- a/email-ingestion-service/src/main/resources/application.properties
+++ b/email-ingestion-service/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=email-ingestion-service
+
+server.port=8191
+
+# PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/inbox_emails
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#Kafka
+spring.kafka.producer.bootstrap.servers=localhost:9092
+spring.kafka.producer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
