--- a/email-ai-service/src/main/resources/application.properties
+++ b/email-ai-service/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=email-ai-service
+
+server.port=8193
+spring.kafka.consumer.bootstrap.servers=localhost:9092
+spring.kafka.consumer.group-id=group1
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.consumer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
