added ai service features

--- a/email-ai-service/src/main/resources/application.properties
+++ b/email-ai-service/src/main/resources/application.properties
@@ -6,3 +6,16 @@ spring.kafka.consumer.group-id=group1
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key.serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.consumer.value.serializer=org.apache.kafka.common.serialization.StringSerializer
+
+
+# Mongo
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=mailsense_ai
+
+# Spring AI / OpenAI config (example env-driven)
+spring.ai.openai.api-key=${OPENAI_API_KEY:}
+# If using a different provider adjust config accordingly
+
+# Topic name (consistent with ingestion service)
+app.kafka.topic.email-new=email.inbox.received
